--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
-docs/doc.aux
-docs/doc.fdb_latexmk
-docs/doc.fls
-docs/doc.log
-docs/doc.out
-docs/doc.synctex.gz
-docs/doc.toc
+documentation/documentation.aux
+documentation/documentation.fdb_latexmk
+documentation/documentation.fls
+documentation/documentation.log
+documentation/documentation.out
+documentation/documentation.synctex.gz
+documentation/documentation.toc
